<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity" android:id="@+id/layout">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Podaj stawkę VAT"
            app:layout_constraintEnd_toStartOf="@+id/vat_spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_tv" android:textSize="25sp"/>

    <TextView
            android:id="@+id/price_tv"
            android:layout_width="58dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:autoText="false"
            android:text="Cena"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:autoSizeTextType="50" />


    <Spinner
            android:id="@+id/vat_spinner"
            android:layout_width="174dp"
            android:layout_height="40dp"
            android:gravity="right"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="228dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="80dp"
            android:text="Podatek dochodowy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textSize="25sp"/>

    <Spinner
            android:id="@+id/incomeSpinner"
            android:layout_width="174dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/vat_spinner"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/textView4"
            android:layout_width="229dp"
            android:layout_height="64dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="80dp"
            android:text="@string/czy_jeste_p_atnikiem_vat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textSize="25sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/switchVat"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/textView5"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Czy jest to wydatek 'samochodowy'?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textSize="25sp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/switchCar" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/nextActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Calculate "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" android:onClick="nextActivity" tools:ignore="OnClick"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="zł"
            android:layout_width="22dp"
            android:layout_height="32dp"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" tools:text="zł" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Switch
            android:text=" "
            android:layout_width="68dp"
            android:layout_height="30dp"
            android:id="@+id/switchVat" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/incomeSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:textOn="on"
            android:textOff="off"
            android:showText="true"
    />
    <Switch
            android:text=" "
            android:layout_width="68dp"
            android:layout_height="30dp"
            android:id="@+id/switchCar" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/switchVat"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:textOn="on"
            android:textOff="off"
            android:showText="true"
    />

    <EditText
            android:id="@+id/price_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>