<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

    <TextView
            android:id="@+id/howMuch_tv"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:gravity="bottom|center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:text="zaoszczędzisz biorąc fakturę VAT na swoją firmę!"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/howMuch_tv" android:gravity="center" android:textSize="25sp"/>
    <TextView
            android:text="Podana cena:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/priceAddeded_tv"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="20sp"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/priceAddeded_tv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:textSize="20sp" android:gravity="right"/>
    <TextView
            android:text="Kwota zaoszczędzona na podatku VAT:"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textSize="20sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/savedOn_vat"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:textSize="20sp"
            android:gravity="bottom|right"
            android:id="@+id/savedOn_vat"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" android:layout_marginRight="4dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/priceAddeded_tv"/>
    <TextView
            android:text="Kwota do obliczenia podatku dochodowego:"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/toCalcuIncome"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="Kwota zaoszczędzona na podatku dochodowym:"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/savedOnIncome"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="20sp"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:id="@+id/savedOnIncome"
            android:textSize="20sp"
            android:gravity="bottom|right"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/toCalcuIncome"/>
    <TextView
            android:text="Faktycznie poniesiony przez Ciebie koszt po odliczeniach:"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/realPriceProduct" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="20sp"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="74dp"
            android:id="@+id/realPriceProduct"
            android:textSize="20sp"
            android:gravity="bottom|right"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/savedOnIncome"/>
    <Button
            android:text="RESET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:layout_width="160dp"
            android:layout_height="49dp"
            android:id="@+id/toCalcuIncome"
            android:textSize="20sp"
            android:gravity="bottom|right" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/savedOn_vat" android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="4dp"/>
</android.support.constraint.ConstraintLayout>